--- a/index.html
+++ b/index.html
@@ -37,26 +37,35 @@ h4 {
 </head>
 
 <body>
-<h1><img src="god-of-war-4.jpg" alt="Kratos"><br>God Of War</h1>
+<h1><img src="god-of-war-4.jpg" alt="Kratos"><br><u>God Of War</u></h1>
 
 
 
 <h2>His History</h2>
 
-
-<p>Kratos was a spartan general whose power was nearly unmatched until one fateful day on the battlefield. Kratos was about to die by enemy hands when he made a pact with Ares. "destroy my enemies and my life is yours." </p>
-
+<article>
+<p>Kratos was a spartan general whose power was nearly unmatched until one fateful day on the battlefield. Kratos was about to die by enemy hands when he made a pact with Ares. <i>"Destroy my enemies and my life is yours."</i> </p>
+<p>Kratos has found power through Pandora's box on his quest against Ares. He searches again for the box in God of War 3 and finds the power in <s>the box again</s> within himself.</p>
+</article>
 
 
 <h3>His Drive</h3>
 
-<p>Kratos is revenge driven. After Ares <em> tricked Kratos into killing his family,</em> Kratos has sought the death of Ares. Ares sent the Furies to stop him, but it failed. When Kratos finds out that the gods only forgave him of his crime, he seeks the death of Zues for not sparing him the memory of his family's murder.</p>
-
+<p>Kratos is revenge driven. <strong>After Ares <em> tricked Kratos into killing his family,</em></strong> Kratos has sought the death of Ares. Ares sent the Furies to stop him, but it failed. <br> When Kratos finds out that the gods only forgave him of his crime (<small><abbr title="God of War">GOW</abbr> <sup>1</sup></small>), he seeks the death of Zues for not sparing him the memory of his family's murder.</p>
+<p>His main at<wbr>tri<wbr>butes are as follows.</p>
+<u1>
+<li>Furious</li>
+<li>Strong</li>
+<li>Vengeful</li>
+<li>Easily tricked</li>
+</u1>
 
 
 <h4>The Aftermath</h4>
 
 <p>The death of the gods reaks havok upon the land. pestilence, floods, and mass death occur because the gods cannot control their forces. A new Norse world shapes with new gods and monsters, and Kratos is still around to do what he does best.</p>
+
+<address>noahfulton@sheridan.edu</address>
 </body>
 
 
