--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ h4 {
 </article>
 
 
-<h3>His Drive</h3>
+<h3 id="startDrive">His Drive</h3>
 
 <p>Kratos is revenge driven. <strong>After Ares <em> tricked Kratos into killing his family,</em></strong> Kratos has sought the death of Ares. Ares sent the Furies to stop him, but it failed. <br> When Kratos finds out that the gods only forgave him of his crime (<small><abbr title="God of War">GOW</abbr> <sup>1</sup></small>), he seeks the death of Zues for not sparing him the memory of his family's murder.</p>
 <p>His main at<wbr>tri<wbr>butes are as follows.</p>
@@ -64,6 +64,13 @@ h4 {
 <h4>The Aftermath</h4>
 
 <p>The death of the gods reaks havok upon the land. pestilence, floods, and mass death occur because the gods cannot control their forces. A new Norse world shapes with new gods and monsters, and Kratos is still around to do what he does best.</p>
+
+<ul>
+<li><a href="/page1.html">God Of War 1 and Prequels</a></li>
+<li><a href="/contents/page2.html">God Of War 2 through end</a></li>
+<li><a href="/info/page3.html">About </a></li>
+<li><a href="tel:+1235551212">123.555.1212</a></li>
+</ul>
 
 <address>noahfulton@sheridan.edu</address>
 </body>
