--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ h4 {
 
 <ul>
 <li><a href="/page1.html">God Of War 1 and Prequels</a></li>
-<li><a href="/contents/page2.html">God Of War 2 through end</a></li>
+<li><a href="/content/page2.html">God Of War 2 through end</a></li>
 <li><a href="/info/page3.html">About </a></li>
 <li><a href="tel:+1235551212">123.555.1212</a></li>
 </ul>
