--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ h4 {
 <h2>His History</h2>
 
 <article>
-<p>Kratos was a spartan general whose power was nearly unmatched until one fateful day on the battlefield. Kratos was about to die by enemy hands when he made a pact with Ares. <i>"Destroy my enemies and my life is yours."</i> </p>
+<p>Kratos was a spartan general whose power was nearly unmatched, until one fateful day on the battlefield. Kratos was about to die by enemy hands when he made a pact with Ares. <i>"Destroy my enemies and my life is yours."</i> </p>
 <p>Kratos has found power through Pandora's box on his quest against Ares. He searches again for the box in God of War 3 and finds the power in <s>the box again</s> within himself.</p>
 </article>
 
