--- a/info/page2.html
+++ b/info/page2.html
@@ -37,7 +37,7 @@ h4 {
 </head>
 
 <body>
-<p><a href="../index.html">Back to Home</p>
+<p><a href="../index.html">Back to Home</a></p>
 <h1><img src="Logo.png" alt="Santa Monica Studio"><br><u>The Creation of God of War</u></h1>
 <h2>The Company</h2>
 <p>SIE Santa Monica Studio is the company that created God of War. The notable actions the company has completed have been finishing the Kinetica game engine which ran the games Kinetica, God of War, and God of War 2. As the company progressed, they wento on to work more games. They've worked on the games Journey, Starhawk, Everybody's Gone to the Rapture, and The Order: 1886. They are now working on a few VR games.</p>
@@ -45,5 +45,5 @@ h4 {
 <p>God of War was originally created by David Jaffe at Santa Monica Studio. Santa Monica Studio developed the three main games while SOE-LA developed the three side games. The games God of War, God of War 2, and God of War 3 were released onto the PS3 and PS4. The newest release of the series jst titled God of War will be based on Norse mythology. The series has reportedly sold more than 21 million copies.
 <h4>Where Did the Idea Come From?<h4>
 <p>David said that most of his inspiration was from a Capcom game called Onimusha. He thought to do the same thing with Greek mythology. The movie Clash of the Titans also inspired David. David wanted to merge the look of Heavy Metal magazine with the actual game. David described the gameplay like the action of Devil May Cry and the puzzles of Ico. The view of the world of the God of War was expanded with David's resignation of possition and moving to creative director.</p>
-<p><a href="../index.html#startDrive"
+<p><a href="../index.html#startDrive">His Drive </a>
 <p><a href="../content/page3.html">Most of The Games's Plots</a>
