--- a/index.html
+++ b/index.html
@@ -1,80 +1,9 @@
 <head>
 <meta charset="utf-8">
-<title>God Of War</title>
-<style>
-
-body {
-	background-color: #800000;
-	margin: 0 15%;
-	font-family: sans-serif;
-	color: #ffffff;
-	}
-
-h1 {
-	color: #ffd11a;
-	text-align: center;
-	font-family: serif;
-	font-weight: normal;
-	text-transform: uppercase;
-	border-bottom: 1px solid #57b1dc;
-	margin-top: 30px;
-	}
-h2 {
-	color: #ffd11a;
-	font-size: 1em;
-	}
-h3 {
-	color: #ffd11a;
-	font-size: 1em;
-	}
-h4 {
-	color: #ffd11a;
-	font-size: 1em;
-	}
-
-
-</style>
+<title>Directory</title>
 </head>
-
 <body>
-<h1><img src="god-of-war-4.jpg" alt="Kratos"><br><u>God Of War</u></h1>
-
-
-
-<h2>His History</h2>
-
-<article>
-<p>Kratos was a spartan general whose power was nearly unmatched, until one fateful day on the battlefield. Kratos was about to die by enemy hands when he made a pact with Ares. <i>"Destroy my enemies and my life is yours."</i> </p>
-<p>Kratos has found power through Pandora's box on his quest against Ares. He searches again for the box in God of War 3 and finds the power in <s>the box again</s> within himself.</p>
-</article>
-
-
-<h3 id="startDrive">His Drive</h3>
-
-<p>Kratos is revenge driven. <strong>After Ares <em> tricked Kratos into killing his family,</em></strong> Kratos has sought the death of Ares. Ares sent the Furies to stop him, but it failed. <br> When Kratos finds out that the gods only forgave him of his crime (<small><abbr title="God of War">GOW</abbr> <sup>1</sup></small>), he seeks the death of Zues for not sparing him the memory of his family's murder.</p>
-<p>His main at<wbr>tri<wbr>butes are as follows.</p>
 <u1>
-<li>Furious</li>
-<li>Strong</li>
-<li>Vengeful</li>
-<li>Easily tricked</li>
-</u1>
-
-
-<h4>The Aftermath</h4>
-
-<p>The death of the gods reaks havok upon the land. pestilence, floods, and mass death occur because the gods cannot control their forces. A new Norse world shapes with new gods and monsters, and Kratos is still around to do what he does best.</p>
-
-<ul>
-<li><a href="/page1.html">God Of War 1 and Prequels</a></li>
-<li><a href="/content/page3.html">God Of War 2 through end</a></li>
-<li><a href="/info/page2.html">About </a></li>
-<li><a href="tel:+1235551212">123.555.1212</a></li>
-</ul>
-
-<address>noahfulton@sheridan.edu</address>
+<li><a href="/inet1650/week4/index.html">Week 4 and Earlier</a></li>
+<li><a href="/inet1650/week5/index.html">Week 5</a>
 </body>
-
-
-
-</html>
