fixed the earilier projects
the earlier project links weren't relative to file

--- a/inet1650/week4/index.html
+++ b/inet1650/week4/index.html
@@ -66,9 +66,9 @@ h4 {
 <p>The death of the gods reaks havok upon the land. pestilence, floods, and mass death occur because the gods cannot control their forces. A new Norse world shapes with new gods and monsters, and Kratos is still around to do what he does best.</p>
 
 <ul>
-<li><a href="/page1.html">God Of War 1 and Prequels</a></li>
-<li><a href="/content/page3.html">God Of War 2 through end</a></li>
-<li><a href="/info/page2.html">About </a></li>
+<li><a href="page1.html">God Of War 1 and Prequels</a></li>
+<li><a href="content/page3.html">God Of War 2 through end</a></li>
+<li><a href="info/page2.html">About </a></li>
 <li><a href="tel:+1235551212">123.555.1212</a></li>
 </ul>
 
