--- a/inet1650/week4/page1.html
+++ b/inet1650/week4/page1.html
@@ -30,7 +30,7 @@ h3 {
 </head>
 
 <body>
-<p> <a href="/index.html"> Back to Home </a></p>
+<p> <a href="index.html"> Back to Home </a></p>
 
 <h1><img src="GodOfWar1.jpg" alt="God of War 1"><br><u>God of War 1 and Prequels</u></h1>
 
