--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
 <meta charset="utf-8">
 <title>Directory</title>
@@ -5,5 +6,7 @@
 <body>
 <u1>
 <li><a href="/inet1650/week4/index.html">Week 4 and Earlier</a></li>
-<li><a href="/inet1650/week5/index.html">Week 5</a>
+<li><a href="/inet1650/week5/index.html">Week 5</a></li>
+<li><a href="inet1650/inet1650-mid-term-project/index.html">Midterm</a></li>
+</u1>
 </body>
