--- a/inet1650/inet1650-mid-term-project/index.html
+++ b/inet1650/inet1650-mid-term-project/index.html
@@ -107,7 +107,7 @@
 			ol.toc li ol li ol li:first-child{ font-weight:bold;} /* first item in each third level should be bold */
 			ol.toc li ol li ol li:nth-child(2) { color:blue;} /* second item in each third level shold be the color blue */
 			
-			#pseudo div.recipe{font-family:monospace;color:lime !important;font-size:14px;} /* all text in under class receipt should be size 14px use font "monospace" and have the color lime */
+			#pseudo div.recipe * {font-family:monospace;color:lime !important;font-size:14px;} /* all text in under class receipt should be size 14px use font "monospace" and have the color lime */
 			
 			
 			/* END HERE: The end of your rules */
