added week 9 to main page
a

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <li><a href="/inet1650/week4/index.html">Week 4 and Earlier</a></li>
 <li><a href="/inet1650/week5/index.html">Week 5</a></li>
 <li><a href="inet1650/inet1650-mid-term-project/index.html">Midterm</a></li>
+<li><a href="inet1650/week9/index.html">Week9</a></li>
 </u1>
 </body>
