--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <li><a href="/inet1650/week5/index.html">Week 5</a></li>
 <li><a href="inet1650/inet1650-mid-term-project/index.html">Midterm</a></li>
 <li><a href="inet1650/week9/index.html">Week9</a></li>
+<li><a href="inet1650/week10/index.html">Week10</a></li>
 </u1>
 </body>
