--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <li><a href="inet1650/inet1650-mid-term-project/index.html">Midterm</a></li>
 <li><a href="inet1650/week9/index.html">Week9</a></li>
 <li><a href="inet1650/week10/index.html">Week10</a></li>
+<li><a href="inet1650/week11/index.html">Week11 (part 1)</a></li>
+<li><a href="inet1650/week11/index2.html">Week11 (part 2)</a></li>
 </u1>
 </body>
