--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <li><a href="inet1650/week10/index.html">Week10</a></li>
 <li><a href="inet1650/week11/index.html">Week11 (part 1)</a></li>
 <li><a href="inet1650/week11/index2.html">Week11 (part 2)</a></li>
+<li><a href="inet1650/week13/index.html">Week13</a></li>
 </u1>
 </body>
