--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <li><a href="inet1650/week11/index.html">Week11 (part 1)</a></li>
 <li><a href="inet1650/week11/index2.html">Week11 (part 2)</a></li>
 <li><a href="inet1650/week13/index.html">Week13</a></li>
+<li><a href="inet1650/week14/index.html">Week14</a></li>
 </u1>
 </body>
